--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -1,14 +1,64 @@
 <?xml version="1.0" encoding="utf-8"?>
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".MyFragment">
 
-    <!-- TODO: Update blank fragment layout -->
     <TextView
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/hello_blank_fragment" />
+        android:id="@+id/letter_text_view"
+        android:layout_width="101dp"
+        android:layout_height="96dp"
+        android:layout_marginStart="152dp"
+        android:layout_marginTop="64dp"
+        android:gravity="center"
+        android:text="Hello World!"
+        android:textSize="72sp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
-</FrameLayout>
+    <Button
+        android:id="@+id/sky_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="92dp"
+        android:text="Sky Letter"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.498"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/letter_text_view" />
+
+    <Button
+        android:id="@+id/root_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Root Letter"
+        app:layout_constraintStart_toStartOf="@+id/sky_button"
+        app:layout_constraintEnd_toEndOf="@+id/sky_button"
+        app:layout_constraintTop_toBottomOf="@+id/sky_button" />
+
+    <Button
+        android:id="@+id/grass_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="32dp"
+        android:text="Grass Letter"
+        app:layout_constraintStart_toStartOf="@+id/root_button"
+        app:layout_constraintEnd_toEndOf="@+id/root_button"
+        app:layout_constraintTop_toBottomOf="@+id/root_button" />
+
+    <TextView
+        android:id="@+id/answer_text_view"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:gravity="center"
+        android:text="Right or Wrong"
+        android:textSize="36sp"
+        app:layout_constraintStart_toStartOf="@+id/grass_button"
+        app:layout_constraintEnd_toEndOf="@+id/grass_button"
+        app:layout_constraintTop_toBottomOf="@+id/grass_button" />
+
+</androidx.constraintlayout.widget.ConstraintLayout>
