--- a/app/src/main/res/layout/fragment_my.xml
+++ b/app/src/main/res/layout/fragment_my.xml
@@ -13,7 +13,7 @@
         android:layout_marginStart="124dp"
         android:layout_marginTop="64dp"
         android:gravity="center"
-        android:text="Hello World!"
+        android:text="H!"
         android:textSize="72sp"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -23,7 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="92dp"
-        android:text="Sky Letter"
+        android:text="Sky"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.498"
         app:layout_constraintStart_toStartOf="parent"
@@ -34,7 +34,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Root Letter"
+        android:text="Root"
         app:layout_constraintStart_toStartOf="@+id/sky_button"
         app:layout_constraintEnd_toEndOf="@+id/sky_button"
         app:layout_constraintTop_toBottomOf="@+id/sky_button" />
@@ -44,7 +44,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="32dp"
-        android:text="Grass Letter"
+        android:text="Grass "
         app:layout_constraintStart_toStartOf="@+id/root_button"
         app:layout_constraintEnd_toEndOf="@+id/root_button"
         app:layout_constraintTop_toBottomOf="@+id/root_button" />
